--- a/projectaki/sports.html
+++ b/projectaki/sports.html
@@ -20,5 +20,6 @@
             <button>Άθλημα</button>
         </div>
         <div>Hello World</div>
+        <div>Hello Github</div>
     </body>
 </html>
